--- a/background.html
+++ b/background.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="background.css" >
-</head>
-<body>
+    <link rel="stylesheet" type="text/css" href="background.css" />
+  </head>
+  <body>
     <canvas id="canvas"></canvas>
     <script src="background.js"></script>
-</body>
+  </body>
 </html>
-
-
-
